Update more Lisk references

--- a/public/views/marketWatcher.html
+++ b/public/views/marketWatcher.html
@@ -90,7 +90,7 @@
           <div class="pull-left lisk-volume">
             <p class="small-title">ARK Volume</p>
             <p class="big-details">
-              <span class="lisk-volume">{{statistics.liskVolume}}</span>
+              <span class="lisk-volume">{{statistics.arkVolume}}</span>
             </p>
           </div>
         </div>
