--- a/public/views/marketWatcher.html
+++ b/public/views/marketWatcher.html
@@ -87,10 +87,10 @@
     <div class="col-xs-12 col-sm-4">
       <div class="row big-info">
         <div class="col-xs-12">
-          <div class="pull-left lisk-volume">
+          <div class="pull-left ark-volume">
             <p class="small-title">ARK Volume</p>
             <p class="big-details">
-              <span class="lisk-volume">{{statistics.arkVolume}}</span>
+              <span class="ark-volume">{{statistics.arkVolume}}</span>
             </p>
           </div>
         </div>
