--- a/public/views/transaction/tx.html
+++ b/public/views/transaction/tx.html
@@ -1,6 +1,6 @@
 <td data-title="Transaction ID" class="text-nowrap">
   <a data-ng-if="tx.vendorField" class="txid ellipsis tx-id-list" href="/tx/{{tx.id}}">
-    <span class="glyphicon glyphicon-tag" title="{{tx.vendorField}}"></span> {{tx.id}}
+    <span class="glyphicon glyphicon-tag" tooltip="{{tx.vendorField}}" tooltip-placement="right"></span> {{tx.id}}
   </a>
   <a data-ng-if="!tx.vendorField" class="txid ellipsis tx-id-list" href="/tx/{{tx.id}}">{{tx.id}}</a>
 </td>
