--- a/public/views/transaction.html
+++ b/public/views/transaction.html
@@ -81,10 +81,10 @@
           </tr>
           <tr>
             <td><strong>Block </strong></td>
-            <td data-ng-if="tx.blockId" class="text-right">
-              <a href="/block/{{tx.blockId}}">{{tx.blockId}}</a>
+            <td data-ng-if="tx.blockid" class="text-right">
+              <a href="/block/{{tx.blockid}}">{{tx.blockid}}</a>
             </td>
-            <td data-ng-if="!tx.blockId" class="text-right">Unconfirmed</td>
+            <td data-ng-if="!tx.blockid" class="text-right">Unconfirmed</td>
           </tr>
         </tbody>
       </table>
