--- a/public/src/css/common.css
+++ b/public/src/css/common.css
@@ -10493,7 +10493,7 @@ a:hover {
 }
 .navbar-default {
     margin: 0;
-    border: 0
+    border: 0;
     background-color :#000 !important;
     border-color :#000 !important;
 }
