--- a/public/views/delegateMonitor.html
+++ b/public/views/delegateMonitor.html
@@ -37,7 +37,7 @@
                   <span class="text-muted" data-ng-switch-when="false">N/A</span>
                 </p>
                 <p class="text-muted">
-                  <span class="ark">{{lastBlock.totalForged || 0 | currency:currency}} {{currency.symbol}} forged</span>
+                  <span class="lisk">{{lastBlock.totalForged || 0 | currency:currency}} {{currency.symbol}} forged</span>
                   <span class="num-trans">from {{lastBlock.numberOfTransactions || 0}} transactions</span>
                 </p>
               </div>
@@ -84,7 +84,7 @@
               <div class="pull-left total-forged">
                 <p class="small-title">Total Forged <span class="text-muted">({{currency.symbol}})</span></p>
                 <p class="big-details">
-                  <span class="ark">{{totalForged || 0 | currency:currency}}</span>
+                  <span class="lisk">{{totalForged || 0 | currency:currency}}</span>
                 </p>
                 <p class="text-muted total-active">between {{totalActive || 0 }} active delegates</p>
               </div>
@@ -100,7 +100,7 @@
                   <a data-ng-href="/address/{{bestForger.address}}" data-ng-switch-when="true">{{bestForger.username}}</a>
                   <span class="text-muted" data-ng-switch-when="false">N/A</span>
                 </p>
-                <p class="text-muted ark">{{bestForger.forged || 0 | currency:currency}} {{currency.symbol}} forged</p>
+                <p class="text-muted lisk">{{bestForger.forged || 0 | currency:currency}} {{currency.symbol}} forged</p>
                 <p class="text-muted time-since">since registration</p>
               </div>
             </div>
@@ -290,7 +290,7 @@
               <tbody>
                 <tr data-ng-repeat="d in activeDelegates | orderBy:natural(tables.active.predicate):tables.active.reverse track by d.rate">
                   <td>{{d.rate}}</td>
-                  <td><a data-ng-if="d.proposal" class="glyphicon glyphicon-user proposal-icon" data-ng-href="https://forum.ark.io/topic/{{d.proposal.topic}}" title="{{d.proposal.description}}" target="_new"></a> <a data-ng-href="/address/{{d.address}}">{{d.username}}</a></td>
+                  <td><a data-ng-if="d.proposal" class="glyphicon glyphicon-user proposal-icon" data-ng-href="https://forum.lisk.io/viewtopic.php?f=48&t={{d.proposal.topic}}" title="{{d.proposal.description}}" target="_new"></a> <a data-ng-href="/address/{{d.address}}">{{d.username}}</a></td>
                   <td class="hidden-xs"><span class="text-muted">{{d.address}}</span></td>
                   <td class="hidden-xs hidden-sm">{{d.forged | currency:currency}} <span class="text-muted">{{currency.symbol}}</span></td>
                   <td class="hidden-xs hidden-sm">{{d.forgingTime | forgingTime}}</td>
@@ -322,7 +322,7 @@
               <tbody>
                 <tr data-ng-repeat='d in standbyDelegates | orderBy:natural(tables.standby.predicate):tables.standby.reverse track by d.rate'>
                   <td>{{d.rate}}</td>
-                  <td><a data-ng-if="d.proposal" class="glyphicon glyphicon-user proposal-icon" data-ng-href="https://forum.ark.io/topic/{{d.proposal.topic}}" title="{{d.proposal.description}}" target="_new"></a> <a data-ng-href="/address/{{d.address}}">{{d.username}}</a></td>
+                  <td><a data-ng-if="d.proposal" class="glyphicon glyphicon-user proposal-icon" data-ng-href="https://forum.lisk.io/viewtopic.php?f=48&t={{d.proposal.topic}}" title="{{d.proposal.description}}" target="_new"></a> <a data-ng-href="/address/{{d.address}}">{{d.username}}</a></td>
                   <td class="hidden-xs"><span class="text-muted">{{d.address}}</span></td>
                   <td class="hidden-xs">{{d.productivity || 0}}%</td>
                   <td class="hidden-xs"><span tooltip="{{d.vote | currency:currency}} {{currency.symbol}}">{{d.approval}}%</span></td>
