--- a/public/views/address.html
+++ b/public/views/address.html
@@ -7,7 +7,7 @@ data-ng-if="address.balance" data-ng-init="hideSNavbar=0">
         <span class="btn-copy" clip-copy="address.address"></span>
       </div>
       <div class="col-md-4">
-        <span class="txvalues txvalues-primary"><strong>Final Balance</strong> {{address.balance | currency:currency}} {{currency.symbol}}</span>
+        <span class="txvalues txvalues-primary"><strong>Final Balance </strong> <strong>{{address.balance | currency:currency}} {{currency.symbol}}</strong></span>
       </div>
     </div>
     <div class="hide_snavbar">
