doing customization for woooba

--- a/public/views/index/header.html
+++ b/public/views/index/header.html
@@ -7,7 +7,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </button>
-      <a class="navbar-brand" href="/"><div class="logo" title="BPL"><img src="/img/BLOCKPOOL_circles_transparency.png" ></div></a>
+      <a class="navbar-brand" href="/"><div class="logo" title="WBX"><img src="/img/woooba-logo-medium.png" ></div></a>
     </div>
     <div class="valign collapse navbar-collapse" collapse="$root.isCollapsed">
       <form id="search-form" data-ng-controller="SearchController" class="navbar-form navbar-left hidden-xs" role="search" data-ng-submit="search()">
