--- a/public/src/css/common.css
+++ b/public/src/css/common.css
@@ -573,7 +573,7 @@ a:hover {
 }
 
 .txvalues-primary {
-  background-color: #f05a2b;
+  background-color: #f58b6a;
   color: #fff;
 }
 
@@ -739,7 +739,7 @@ a:hover {
 }
 
 .alert-warning {
-  color: #fff;
+  color: #fff !important;
   background-color: #f58b6a !important;
   border-color: #f58b6a !important;
 }
@@ -2473,9 +2473,9 @@ a.text-info:focus,
 a.text-info:hover {
     color: #245269
 }
-.text-warning {
+/*.text-warning {
     color: #8a6d3b
-}
+}*/
 a.text-warning:focus,
 a.text-warning:hover {
     color: #66512c
@@ -4473,9 +4473,8 @@ fieldset[disabled] .btn-link {
 }
 .btn-link:focus,
 .btn-link:hover {
-    color: #23527c;
-    text-decoration: underline;
-    background-color: transparent
+    color: #108441;
+    background-color: transparent;
 }
 .btn-link[disabled]:focus,
 .btn-link[disabled]:hover,
@@ -5676,7 +5675,7 @@ fieldset[disabled] .navbar-inverse .btn-link:hover {
 .pagination>li>span:focus,
 .pagination>li>span:hover {
     z-index: 2;
-    color: #23527c;
+    color: #108441;
     background-color: #eee;
     border-color: #ddd
 }
@@ -10833,7 +10832,7 @@ fieldset[disabled] .btn-primary:hover {
     vertical-align: middle
 }
 .txvalues-primary {
-    background-color: ;
+    background-color:#f58b6a;
     color:#fff;
 }
 .txvalues-default {
@@ -10982,7 +10981,7 @@ fieldset[disabled] .btn-primary:hover {
     z-index: -9999
 }
 .alert-warning {
-    color: #fff;
+    color: #fff !important;
     background-color: #f58b6a !important;
     border-color: #f58b6a!important;
 }
@@ -11328,14 +11327,13 @@ a.sort-order span.reverse:after {
 .nav-pills>li.active>a,
 .nav-pills>li.active>a:focus,
 .nav-pills>li.active>a:hover {
-    color: #fff;
+    color: #fff !important;
     background-color: #5b5b5b
 }
 .nav-pills>li>a,
 .nav-pills>li>a:focus,
 .nav-pills>li>a:hover {
-    color: #5b5b5b;
-    background-color: #fff
+    color: #fff !important;
 }
 .nav-pills>li {
     width: 49%
