--- a/public/src/css/common.css
+++ b/public/src/css/common.css
@@ -42,8 +42,8 @@ h1>small {
 }*/
 
 a:hover {
-  color: #f57c00;
-  text-decoration: none;
+  color: #2b6b49 !important ;
+  text-decoration: none !important;
   transition: color 0.3s ease 0s;
 }
 
