fixing the link to snapshots

--- a/public/views/index/header.html
+++ b/public/views/index/header.html
@@ -57,7 +57,7 @@
               <a href="/networkMonitor">Network Monitor</a>
             </li>
             <li>
-              <a href="/snapshots" target="_blank">Snapshots</a>
+              <a href="http://ec2-13-56-163-57.us-west-1.compute.amazonaws.com:9031/snapshots/" target="_blank">Snapshots</a>
             </li>
 <!--             <li>
               <a href="https://login.lisk.io" target="_blank">Web Login</a>
